--- a/templates/configs/nodeos/genesis.json.j2
+++ b/templates/configs/nodeos/genesis.json.j2
@@ -1,6 +1,6 @@
 {
   "initial_timestamp": "2018-03-02T12:00:00.000",
-  "initial_key": "{{ boot.pub_key }}",
+  "initial_key": "{{ bc_cyberos_boot.pub_key }}",
   "initial_configuration": {
     "max_block_net_usage": 1048576,
     "target_block_net_usage_pct": 1000,
