--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -8,8 +8,8 @@ bnet-endpoint = 0.0.0.0:4321
 
 bnet-no-trx = false
 
-producer-name = {{ bc_cyberos_producer_name }}
-signature-provider = {{ bc_cyberos_producer_pub_key }}=KEY:{{ bc_cyberos_producer_pvt_key }}
+producer-name = {{ producer_name }}
+signature-provider = {{ producer_pub_key }}=KEY:{{ producer_pvt_key }}
 
 p2p-listen-endpoint = 0.0.0.0:9876
 p2p-server-address = 0.0.0.0:9876
