Add resume producers after start and small fixes

--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -78,5 +78,6 @@ plugin = eosio::bnet_plugin
 plugin = eosio::history_plugin
 
 plugin = eosio::producer_plugin
+plugin = eosio::producer_api_plugin
 plugin = eosio::net_api_plugin
 plugin = eosio::txn_test_gen_plugin
