--- a/templates/configs/bench/bench.config.json.j2
+++ b/templates/configs/bench/bench.config.json.j2
@@ -7,7 +7,7 @@
       "tokenName": "{{ bench_config.transactions.tokenName }}",
       "threadsAmount": "{{ bench_config.transactions.threadsAmount }}",
       "transfersAmount": "{{ bench_config.transactions.transfersAmount }}",
-      "createTokensAmount": "{{ bench_config.transactions.transfersAmount }}",
+      "createTokensAmount": "{{ bench_config.transactions.createTokensAmount }}",
       "createTokens": "{{ bench_config.transactions.createTokens }}",
       "issueTokens": "{{ bench_config.transactions.issueTokens }}",
       "blocksBehind": "{{ bench_config.transactions.blocksBehind }}",
