--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -88,4 +88,5 @@ telemetry-threads = 5
 
 plugin = eosio::telemetry_plugin
 plugin = eosio::grandpa_plugin
+grandpa-private-key={{ producer_pvt_key }}
 
