Change name of RANDA plugin

--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -88,8 +88,8 @@ telemetry-threads = 5
 
 plugin = eosio::telemetry_plugin
 
-{% if bc_cyberos_plugin_grandpa == "present" %}
-plugin = eosio::grandpa_plugin
-grandpa-private-key={{ producer_pvt_key }}
+{% if bc_cyberos_plugin_randpa == "present" %}
+plugin = eosio::randpa_plugin
+randpa-private-key={{ producer_pvt_key }}
 {% endif %}
 
