--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -1,4 +1,4 @@
-http-alias = nodeosd-{{ bc_cyberos_node_id }}:8888
+http-alias = nodeosd-{{ bc_haya_node_id }}:8888
 
 http-server-address = 0.0.0.0:8888
 
@@ -62,7 +62,7 @@ use-socket-read-watermark = 0
 peer-log-format = ["${_name}" ${_ip}:${_port}]
 bnet-peer-log-format = ["${_name}" ${_ip}:${_port}]
 
-enable-stale-production = {{ bc_cyberos_isproduction_enabled }}
+enable-stale-production = {{ bc_haya_isproduction_enabled }}
 max-transaction-time = 1000
 max-irreversible-block-age = -1
 
@@ -88,7 +88,7 @@ telemetry-threads = 5
 
 plugin = eosio::telemetry_plugin
 
-{% if bc_cyberos_plugin_randpa == "present" %}
+{% if bc_haya_plugin_randpa == "present" %}
 plugin = eosio::randpa_plugin
 randpa-private-key={{ producer_pvt_key }}
 {% endif %}
