--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -1,4 +1,4 @@
-http-alias = nodeosd-{{ bc_haya_node_id }}:8888
+http-alias = hayanode-{{ bc_haya_node_id }}:8888
 
 http-server-address = 0.0.0.0:8888
 
