Update bench and refactoring dyngroups

--- a/templates/grafana/haya/dashboard.json.j2
+++ b/templates/grafana/haya/dashboard.json.j2
@@ -9,11 +9,11 @@
        "url":"/d/{{ UID }}/{{ dashboard_slug }}",
        "canStar":true,
        "expires":"0001-01-01T00:00:00Z",
-       "isFolder":false,
+       "isFolder":true,
        "updated":"2019-04-11T14:07:05Z",
        "slug":"{{ dashboard_slug }}",
        "folderTitle":"General",
-       "version":11,
+       "version":12,
        "createdBy":"{{ admin_user }}",
        "updatedBy":"{{ admin_user }}",
        "folderId":0,
