--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -18,7 +18,7 @@ bnet-connect = {{ hostvars[host]['ansible_'+bc_private_interface]['ipv4']['addre
 
 bnet-no-trx = false
 
-{% if bc_haya_isproduction_enabled %}
+{% if bc_haya_isproduction_enabled == "true" %}
 producer-name = {{ producer_name }}
 {% endif %}
 
