--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -12,7 +12,7 @@ pause-on-startup = true
 
 {% for host in groups['bcpeers'] %}
 {% if hostvars[host]['ansible_'+bc_private_interface]['ipv4']['address'] != hostvars[inventory_hostname]['ansible_'+bc_private_interface]['ipv4']['address'] %}
-bnet-connect = {{ hostvars[host]['ansible_'+bc_private_interface]['ipv4']['address'] }}:4321
+p2p-peer-address = {{ hostvars[host]['ansible_'+bc_private_interface]['ipv4']['address'] }}:9876
 {% endif %}
 {% endfor %}
 
