Updates for haya and contracts (#7)
* Update bench and refactoring dyngroups

* Change droplet image and python version. Fix grafana module, remove producer-name for full-node

* Fix creating Haya system account

* Add tags for fast update

* Fix

* Add tags for fast update

* Add resume producers to update tag and increase retries count

* Add changes from testnet

* Changes for fluentd

* Fix for creating dashboard

* Added playbook and contracts for new tank version

* Change haya image and fixes for bootstrap

* Fix playbook

* Split boot tasks to setup system contracts

* Fix path to contracts

* Add dao contracts

* Fix path to contracts

* Added stop_timeout for containers

* Change mac client connection

* Revert "Add dao contracts"

This reverts commit a1976da4

* Added log configuration for bootnodes

* Dao boot (#6)

* vote stake

* change image name

* update system contract

* Generalize role and small updates

* Reorganize molecule scenarios and update .gitignore

* Fixed linters errors/warning and fixed errors in the clean haya

--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -2,8 +2,6 @@ http-alias = hayanode-{{ bc_haya_node_id }}:8888
 
 http-server-address = 0.0.0.0:8888
 
-bnet-endpoint = 0.0.0.0:4321
-
 {% if bc_component_name == "boot" %}
 pause-on-startup = false
 {% else%}
@@ -12,13 +10,18 @@ pause-on-startup = true
 
 {% for host in groups['bcpeers'] %}
 {% if hostvars[host]['ansible_'+bc_private_interface]['ipv4']['address'] != hostvars[inventory_hostname]['ansible_'+bc_private_interface]['ipv4']['address'] %}
-bnet-connect = {{ hostvars[host]['ansible_'+bc_private_interface]['ipv4']['address'] }}:4321
+p2p-peer-address = {{ hostvars[host]['ansible_'+bc_private_interface]['ipv4']['address'] }}:9876
 {% endif %}
 {% endfor %}
 
-bnet-no-trx = false
-
+{% if bc_haya_isproduction_enabled == "true" %}
 producer-name = {{ producer_name }}
+{% endif %}
+
+{% if bc_haya_isproduction_enabled == "false" %}
+plugin = eosio::history_api_plugin
+{% endif %}
+
 signature-provider = {{ producer_pub_key }}=KEY:{{ producer_pvt_key }}
 
 p2p-listen-endpoint = 0.0.0.0:9876
@@ -37,7 +40,7 @@ validation-mode = full
 disable-ram-billing-notify-checks = false
 https-client-validate-peers = 1
 
-access-control-allow-origin = "*"
+access-control-allow-origin = *
 access-control-allow-credentials = false
 
 max-body-size = 1048576
@@ -51,7 +54,7 @@ max-login-timeout = 60
 p2p-max-nodes-per-host = 20
 
 allowed-connection = any
-max-clients = 25
+max-clients = 0
 connection-cleanup-period = 30
 max-cleanup-time-msec = 10
 network-version-match = 0
@@ -60,7 +63,6 @@ sync-fetch-span = 100
 use-socket-read-watermark = 0
 
 peer-log-format = ["${_name}" ${_ip}:${_port}]
-bnet-peer-log-format = ["${_name}" ${_ip}:${_port}]
 
 enable-stale-production = {{ bc_haya_isproduction_enabled }}
 max-transaction-time = 1000
@@ -74,13 +76,11 @@ txn-reference-block-lag = 0
 
 plugin = eosio::chain_api_plugin
 plugin = eosio::http_plugin
-plugin = eosio::bnet_plugin
 plugin = eosio::history_plugin
 
 plugin = eosio::producer_plugin
 plugin = eosio::producer_api_plugin
 plugin = eosio::net_api_plugin
-plugin = eosio::txn_test_gen_plugin
 
 telemetry-endpoint = 8889
 telemetry-uri = /metrics
@@ -90,6 +90,5 @@ plugin = eosio::telemetry_plugin
 
 {% if bc_haya_plugin_randpa == "present" %}
 plugin = eosio::randpa_plugin
-randpa-private-key={{ producer_pvt_key }}
 {% endif %}
 
