--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -8,11 +8,13 @@ pause-on-startup = false
 pause-on-startup = true
 {% endif %}
 
+{% if not bc_setup_local %}
 {% for host in groups['bcpeers'] %}
 {% if hostvars[host]['ansible_'+bc_private_interface]['ipv4']['address'] != hostvars[inventory_hostname]['ansible_'+bc_private_interface]['ipv4']['address'] %}
 p2p-peer-address = {{ hostvars[host]['ansible_'+bc_private_interface]['ipv4']['address'] }}:9876
 {% endif %}
 {% endfor %}
+{% endif %}
 
 {% if bc_haya_isproduction_enabled == "true" %}
 producer-name = {{ producer_name }}
