Add scenario for Game of Stakes (#11)

--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -16,6 +16,7 @@ p2p-peer-address = {{ hostvars[host]['ansible_'+bc_private_interface]['ipv4']['a
 
 {% if bc_haya_isproduction_enabled == "true" %}
 producer-name = {{ producer_name }}
+agent-name = {{ producer_name }}
 {% endif %}
 
 {% if bc_haya_isproduction_enabled == "false" %}
@@ -26,6 +27,8 @@ signature-provider = {{ producer_pub_key }}=KEY:{{ producer_pvt_key }}
 
 p2p-listen-endpoint = 0.0.0.0:9876
 p2p-server-address = 0.0.0.0:9876
+
+filter-on = *
 
 blocks-dir = "blocks"
 abi-serializer-max-time-ms = 15000
