fix bench script

--- a/templates/configs/bench/haya.bench.config.json.j2
+++ b/templates/configs/bench/haya.bench.config.json.j2
@@ -1,5 +1,5 @@
 {
-  "rpcUrl": "{{ bench_config.rpc_Url }}",
+  "rpcUrl": "http://localhost:{{ bc_haya_node_http_port }}",
   "tokensContract": {
     "wasmFilePath": "{{ bench_config.tokensContract.wasmFilePath }}",
     "abiFilePath": "{{ bench_config.tokensContract.abiFilePath }}"
