--- a/templates/scripts/bin/bench.j2
+++ b/templates/scripts/bin/bench.j2
@@ -27,8 +27,8 @@ check_cmd_in_path docker
 # Set up mounted volumes, environment, and run our containerized command
 exec docker run \
   --interactive --rm --network=host \
-  --volume "{{ bc_path_general }}/bench/config/bench.config.json"/:/tool/bench.config.json \
-  --volume "{{ bc_path_general }}/bench/config/haya.bench.config.json"/:/tool/haya.bench.config.json \
-  --volume "{{ bc_path_general }}/bench/config/haya.bench.config.json"/:/tool/blockchain.bench.config.json \
+  --volume "{{ bc_path_general }}/bench/config/bench.config.json":/tool/bench.config.json \
+  --volume "{{ bc_path_general }}/bench/config/haya.bench.config.json":/tool/haya.bench.config.json \
+  --volume "{{ bc_path_general }}/bench/config/haya.bench.config.json":/tool/blockchain.bench.config.json \
   --workdir /tool \
   "mixbytes/tank.bench-haya" "$@"
