--- a/templates/configs/bench/haya.bench.config.json.j2
+++ b/templates/configs/bench/haya.bench.config.json.j2
@@ -20,8 +20,8 @@
     "stopOnError": "{{ bench_config.transactions.stopOnError }}"
   },
   "creatorAccount": {
-    "name": "{{ bench_config.creatorAccount.name }}",
-    "privateKey": "{{ bench_config.creatorAccount.privateKey }}"
+    "name": "{{ bc_haya_boot.name }}",
+    "privateKey": "{{ bc_haya_boot.pvt_key }}"
   },
   "toAccount": {
     "create": {{ bench_config.toAccount.create }},
