--- a/templates/scripts/bin/bench.j2
+++ b/templates/scripts/bin/bench.j2
@@ -29,6 +29,5 @@ exec docker run \
   --interactive --rm --network=host \
   --volume "{{ bc_path_general }}/bench/config/bench.config.json":/tool/bench.config.json \
   --volume "{{ bc_path_general }}/bench/config/haya.bench.config.json":/tool/haya.bench.config.json \
-  --volume "{{ bc_path_general }}/bench/config/haya.bench.config.json":/tool/blockchain.bench.config.json \
   --workdir /tool \
-  "mixbytes/tank.bench-haya" "$@"
+  "mixbytes/tank.bench-haya" "--profile=/opt/bench/profile.js" "$@"
