--- a/templates/configs/bench/haya.bench.config.json.j2
+++ b/templates/configs/bench/haya.bench.config.json.j2
@@ -1,5 +1,7 @@
 {
-  "rpcUrl": "http://localhost:{{ bc_haya_node_http_port }}",
+  "rpcUrls": [
+    "http://localhost:{{ bc_haya_node_http_port }}",
+  ],
   "tokensContract": {
     "wasmFilePath": "{{ bench_config.tokensContract.wasmFilePath }}",
     "abiFilePath": "{{ bench_config.tokensContract.abiFilePath }}"
@@ -17,7 +19,8 @@
     "keyPoints": {{ bench_config.transactions.keyPoints }},
     "keyPointsAmount": {{ bench_config.transactions.keyPointsAmount }},
     "threadsAmount": {{ bench_config.transactions.threadsAmount }},
-    "stopOnError": "{{ bench_config.transactions.stopOnError }}"
+    "stopOnError": "{{ bench_config.transactions.stopOnError }}",
+    "highloadWritesCount": {{ bench_config.transactions.highloadWritesCount }}
   },
   "creatorAccount": {
     "name": "{{ bc_haya_boot.name }}",
