--- a/templates/configs/nodeos/config.ini.j2
+++ b/templates/configs/nodeos/config.ini.j2
@@ -28,7 +28,6 @@ signature-provider = {{ producer_pub_key }}=KEY:{{ producer_pvt_key }}
 p2p-listen-endpoint = 0.0.0.0:9876
 p2p-server-address = 0.0.0.0:9876
 
-filter-on = *
 
 blocks-dir = "blocks"
 abi-serializer-max-time-ms = 15000
@@ -79,7 +78,11 @@ txn-reference-block-lag = 0
 
 plugin = eosio::chain_api_plugin
 plugin = eosio::http_plugin
+
+{% if bc_haya_plugin_history == "present" %}
 plugin = eosio::history_plugin
+filter-on = *
+{% endif %}
 
 plugin = eosio::producer_plugin
 {% if bc_haya_plugin_producer_api %}
